--- a/style.css
+++ b/style.css
@@ -499,10 +499,11 @@ header.header-active .navbar a{
      
 
     header .navbar{
-        position: hide;
+        /* position: hide; */
         margin-top: 25px;
         top:-100rem; left: 0;
         width: 100%;
+    
         opacity: 0;
         background:rgb(255, 255, 255);
         border-top: .1rem solid rgba(0,0,0,.3);
